--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -855,17 +855,17 @@ issues = Report Issues
 
 joinGroup = join group
 
-joinGroup.action               = send request
-joinGroup.already.member.error = You already are a member of this group.
+joinGroup.action                = send request
+joinGroup.already.member.error  = You already are a member of this group.
 joinGroup.already.request.error = You have already sent a group join request.
-joinGroup.deny.noUser          = The user you try to deny access does not exist.
-joinGroup.info                 = To join a group you must send a request to the group admin.
-joinGroup.reason               = reason
-joinGroup.reason.hint          = Give a short motivation of why you want to join this group.
-joinGroup.reason.hint.appendix = ({0} characters)
+joinGroup.deny.noUser           = The user you try to deny access does not exist.
+joinGroup.info                  = To join a group you must send a request to the group admin.
+joinGroup.reason                = reason
+joinGroup.reason.hint           = Give a short motivation of why you want to join this group.
+joinGroup.reason.hint.appendix  = ({0} characters)
 joinGroup.request.sent.message  = Your request to join group <a href="/group/{0}">{1}</a> has been sent to the group moderators.
-joinGroup.short                = join
-joinGroup.spammerError         = Joining this group is not possible.
+joinGroup.short                 = join
+joinGroup.spammerError          = Joining this group is not possible.
 
 last = &rang;&rang;
 
@@ -1786,12 +1786,12 @@ settings.group.editSettings                                 = edit settings
 settings.group.error.addUserToGroupFailed                   = The user {0} could not be added to the group {1}.
 settings.group.error.groupDoesNotExist                      = The group, of which you wanted to change the settings, does not exist.
 settings.group.error.mandatoryFieldsNotSet                  = At least one of the required attributes of the group, that was to update, was not set: groupId, name, privacyLevel, sharedDocuments
-settings.group.header                            = group settings
-settings.group.homepage                          = homepage
+settings.group.header                                       = group settings
+settings.group.homepage                                     = homepage
 settings.group.inviteUser.button                            = invite
 settings.group.inviteUser.help                              = the name of the user you want to invite
 settings.group.joinRequest                                  = join requests
-settings.group.joinRequests                      = group join requests
+settings.group.joinRequests                                 = group join requests
 settings.group.login                                        = Sorry, you are not logged in with the corresponding group account. Please login as group {0}.
 settings.group.memberList                                   = member list
 settings.group.memberList.empty                             = no users in group
@@ -1800,29 +1800,30 @@ settings.group.name                                         = name
 settings.group.noGroups                                     = You aren't a member of any group.
 settings.group.pendingInvites                               = group invites
 settings.group.pendingInvites.headline                      = You are invited to join the following groups
-settings.group.pendingRequests                   = pending requests
-settings.group.profileInfo                       = TODO
-settings.group.realname                          = real group name
+settings.group.pendingRequests                              = pending requests
 settings.group.permission.communityPostInspectionPermission = Members of the group can inspect community posts.
 settings.group.permission.fetch                             = fetch permissions
 settings.group.permission.help                              = Click to fetch the selected group's permissions.
 settings.group.permissionHeading                            = edit group level permissions
 settings.group.permissionIntro                              = Select a group, fetch its current permissions and add or remove permissions.
+settings.group.profileInfo                                  = TODO
+settings.group.realname                                     = real group name
 settings.group.remInvite.button                             = dismiss
 settings.group.remInvite.button.title                       = dismiss the group invite
-settings.group.removeRequest                     = delete request
-settings.group.removeRequest.title               = remove your join request
+settings.group.removeRequest                                = delete request
+settings.group.removeRequest.title                          = remove your join request
 settings.group.reporting                                    = publication reporting settings
 settings.group.reporting.address                            = reporting service
 settings.group.reporting.mail                               = mail reporting settings
 settings.group.reporting.update                             = update reporting settings
 settings.group.reqGroup                                     = request a new group
 settings.group.reqReason                                    = reason for request
-settings.group.requestGroup.description          = A new group can be created on the page <a href="{0}">{1}</a>.
-settings.group.requestGroup.link                 = request new group
+settings.group.requestGroup.description                     = A new group can be created on the page <a href="{0}">{1}</a>.
+settings.group.requestGroup.link                            = request new group
 settings.group.settings                                     = group settings
 settings.group.sharedDocuments                              = shared documents
 settings.group.sharedDocuments.help                         = If activated, group members have access to the documents of other group members.
+settings.group.update.success                               = group permissions have been updated
 settings.groups                                             = groups
 settings.groups.actions.shareDocuments                      = share
 settings.groups.documentsharing.disabled                    = disabled
