--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1795,43 +1795,44 @@ settings.group.error.addUserToGroupFailed                   = Der Benutzer {0} k
 settings.group.error.changeGroupRoleFailed                  = Die Gruppenrolle des Benutzers {0} konnte nicht bearbeitet werden.
 settings.group.error.groupDoesNotExist                      = Die Gruppe, deren Einstellungen Sie ver\u00E4ndern wollten, existiert nicht.
 settings.group.error.mandatoryFieldsNotSet                  = Mindestens eine der Eigenschaften der Gruppe, die Sie updaten wollten, war nicht gesetzt: groupId, name, privacyLevel, sharedDocuments
-settings.group.header                            = Gruppeneinstellungen
-settings.group.homepage                          = Homepage
+settings.group.header                                       = Gruppeneinstellungen
+settings.group.homepage                                     = Homepage
 settings.group.inviteUser                                   = Einen Benutzer in die Gruppe einladen
 settings.group.inviteUser.button                            = einladen
 settings.group.inviteUser.help                              = Der Name des Benutzers, der in die Gruppe eingeladen werden soll
-settings.group.joinRequests                      = Gruppen-Mitgliedsschaftanfrage
+settings.group.joinRequests                                 = Gruppen-Mitgliedsschaftanfrage
 settings.group.login                                        = Leider sind Sie nicht mit dem zugeh\u00F6rigen Gruppenkonto angemeldet. Bitte melden Sie sich mit dem Gruppennamen {0} an.
 settings.group.memberList                                   = Mitgliederliste
 settings.group.memberList.help                              = Die Sichtbarkeit der Gruppenmitgliederliste einstellen
 settings.group.noGroups                                     = Sie geh\u00F6ren keiner Gruppe an.
 settings.group.pendingInvites                               = Offene Einladungen
 settings.group.pendingInvites.headline                      = Sie wurden in folgende Gruppen eingeladen
-settings.group.pendingRequests                   = Offene Anfragen
-settings.group.profileInfo                       = TODO
-settings.group.realname                          = Name der Gruppe
+settings.group.pendingRequests                              = Offene Anfragen
 settings.group.permission.communityPostInspectionPermission = Mitglieder der Gruppe k\u00F6nnen Community Eintr\u00E4ge als gesichtet markieren.
 settings.group.permission.fetch                             = Berechtigungen laden
 settings.group.permission.help                              = Klicken Sie hier um die derzeitigen Gruppen-Level Berechtigungen anzuzeigen.
 settings.group.permissionHeading                            = Gruppen-Level Berechtigungen bearbeiten
 settings.group.permissionIntro                              = W\u00E4hlen Sie eine Gruppe aus, laden Sie die aktuellen Gruppen-Level Berechtigungen und l\u00F6schen Sie diese oder f\u00FCgen Sie weitere hinzu.
+settings.group.profileInfo                                  = TODO
+settings.group.realname                                     = Name der Gruppe
 settings.group.remInvite.button                             = entfernen
 settings.group.remInvite.button.title                       = Mitgliedschaftsantrag entfernen
-settings.group.removeRequest                     = Anfrage l\u00F6schen
-settings.group.removeRequest.title               = L\u00F6scht Ihre Mitgliedschaftsanfrage
+settings.group.removeRequest                                = Anfrage l\u00F6schen
+settings.group.removeRequest.title                          = L\u00F6scht Ihre Mitgliedschaftsanfrage
 settings.group.reporting                                    = Publikationsmeldungseinstellungen
 settings.group.reporting.address                            = Meldungsservice
 settings.group.reporting.mail                               = E-Mail-Meldungseinstellungen
 settings.group.reporting.update                             = Meldungseinstellungen aktualisieren
 settings.group.reqGroup                                     = Eine neue Gruppe beantragen
 settings.group.reqGroup.button                              = beantragen
-settings.group.requestGroup.description          = Eine neue Gruppe kann auf der Seite <a href="{0}">{1}</a> beantragt werden.
-settings.group.requestGroup.link                 = neue Gruppe beantragen
+settings.group.requestGroup.description                     = Eine neue Gruppe kann auf der Seite <a href="{0}">{1}</a> beantragt werden.
+settings.group.requestGroup.link                            = neue Gruppe beantragen
 settings.group.revUser.button                               = ablehnen
 settings.group.revUser.button.title                         = Mitgliedschaftsantrag des Benutzers ablehnen
 settings.group.settings                                     = Gruppeneinstellungen
 settings.group.sharedDocuments                              = Dokumentenfreigabe
 settings.group.sharedDocuments.help                         = Bei aktivierter Freigabe haben die Gruppenmitglieder Zugriff auf die Dokumente anderer Gruppenmitglieder.
+settings.group.update.success                               = Die Gruppen-Level Berechtigungen wurden ge\u00E4ndert.
 settings.groups                                             = Gruppen
 settings.import.button                                      = Importieren
 settings.jabRef.begin                                       = begin.layout (optional)
