added missing message

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -264,6 +264,8 @@ close = schlie\u00DFen
 
 community = Community
 
+community.page = Community Seite
+
 concept.sidebar.title       = St\u00F6bern
 concept.title_with_count    = Konzepte von {0} ({1})
 concept.title_with_count.my = Meine Konzepte ({0})
