changed messages for register/saml/profile_form.tagx

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1583,52 +1583,57 @@ ranking.tfidf          = tfidf
 
 recommended.pagetitle = Empfohlene Beitr\u00E4ge
 
-register.acceptPrivacy          = Ich akzeptiere die <a href="/help_de/Datenschutz" target="_blank">Datenschutzbestimmungen</a> und die <a href="/help_de/Datenschutz" target="_blank">Nutzungsbedingungen</a> von {0}.
-register.activate               = Um die Registrierung abzuschlie\u00DFen, klicken Sie bitte innerhalb der n\u00E4chsten 24 Stunden auf den Aktivierungs-Link in der Email, die an Sie gesendet wurde. <br/><br/>Sollten Sie diesen Link in den n\u00E4chsten 24 Stunden nicht anklicken k\u00F6nnen, so k\u00F6nnen Sie sich erneut mit dem gleichen Benutzernamen registrieren.
-register.additional             = Zus\u00E4tzliche Informationen
-register.captchaAndPrivacy      = Captcha, Datenschutzerkl\u00E4rung und Nutzungsbedingungen
-register.confirmationMail       = Eine Best\u00E4tigung wurde an Ihre E-Mail-Adresse gesendet.
-register.description            = Erstellen Sie Ihren pers\u00F6nlichen Account um {0} zu nutzen.
-register.dragButtons            = Ziehen Sie die Schaltfl\u00E4chen mit der Maus in die Linkleiste Ihres Browsers.
-register.heading                = Ein neues Benutzerkonto anlegen
-register.heading1               = {0} beitreten
-register.internetExplorer       = Im Internet Explorer m\u00FCssen Sie mit der rechten Maustaste auf die Schaltfl\u00E4che klicken und "zu Favoriten hinzuf\u00FCgen" ausw\u00E4hlen. Weitere Informationen 
-register.internetExplorer.here  = hier
+register.acceptPrivacy              = Ich akzeptiere die <a href="/help_de/Datenschutz" target="_blank">Datenschutzbestimmungen</a> und die <a href="/help_de/Datenschutz" target="_blank">Nutzungsbedingungen</a> von {0}.
+register.activate                   = Um die Registrierung abzuschlie\u00DFen, klicken Sie bitte innerhalb der n\u00E4chsten 24 Stunden auf den Aktivierungs-Link in der Email, die an Sie gesendet wurde. <br/><br/>Sollten Sie diesen Link in den n\u00E4chsten 24 Stunden nicht anklicken k\u00F6nnen, so k\u00F6nnen Sie sich erneut mit dem gleichen Benutzernamen registrieren.
+register.additional                 = Zus\u00E4tzliche Informationen
+register.captchaAndPrivacy          = Captcha, Datenschutzerkl\u00E4rung und Nutzungsbedingungen
+register.confirmationMail           = Eine Best\u00E4tigung wurde an Ihre E-Mail-Adresse gesendet.
+register.description                = Erstellen Sie Ihren pers\u00F6nlichen Account um {0} zu nutzen.
+register.dragButtons                = Ziehen Sie die Schaltfl\u00E4chen mit der Maus in die Linkleiste Ihres Browsers.
+register.heading                    = Ein neues Benutzerkonto anlegen
+register.heading1                   = {0} beitreten
+register.internetExplorer           = Im Internet Explorer m\u00FCssen Sie mit der rechten Maustaste auf die Schaltfl\u00E4che klicken und "zu Favoriten hinzuf\u00FCgen" ausw\u00E4hlen. Weitere Informationen 
+register.internetExplorer.here      = hier
 # LDAP registration 
-register.ldap.hint1             = Wahlweise
-register.ldap.hint2             = registrieren Sie sich mit Hilfe von LDAP. 
-register.ldap.hint3             = Es ist einfacher und Sie werden nicht brauchen, einen neuen Benutzername und ein Passwort im Kopf zu behalten. \r\n
-register.ldap.optional          = optionale Information
-register.ldap.required          = ben\u00F6tigte Information
-register.ldap.step1             = Schritt 1 - Bitte geben Sie Ihre Bibliothekszugangsdaten ein.
-register.ldap.step2             = Schritt 2 - Bitte korrigieren Sie Ihre Profildaten.
-register.nextSteps              = N\u00E4chste Schritte:
-register.nextSteps.step1        = Mit Hilfe dieser drei Schaltfl\u00E4chen k\u00F6nnen Sie leicht und schnell Lesezeichen und Publikationsreferenzen eintragen und Ihre pers\u00F6nliche Sammlung einsehen. Ziehen Sie diese Schaltfl\u00E4chen in die Linkleiste Ihres Browsers.
-register.nextSteps.step2.click  = Ein anschlie\u00DFender Klick auf "mein{0}" zeigt Ihnen Ihr erstes erfolgreich eingetragenes Lesezeichen. 
-register.nextSteps.step2.surf   = Besuchen Sie Ihre Lieblingsseite und speichern Sie ein Lesezeichen indem Sie auf die gerade hinzugef\u00FCgte "Lesezeichen eintragen" Schaltfl\u00E4che klicken.
-register.notice.ldap            = Registrieren Sie sich bei BibSonomy mit der Hilfe Ihres institutionellen LDAP-Servers 
-register.notice.openid          = Registrieren Sie sich bei BibSonomy mit Ihrer OpenID
-register.openid.desc            = OpenID ist ein neuer offener Standard, mit dem Sie sich auf Websites \u00FCber nur eine URL anmelden k\u00F6nnen,\ndie Ihnen geh\u00F6rt. Bei dieser URL kann es sich um Ihre Homepage oder Ihr Blog handeln. Sie kann Ihnen auch durch eine Website,\ndie Sie verwenden, zur Verf\u00FCgung gestellt werden. Sie m\u00FCssen sich in jedem Fall nur einmal bei Ihrem OpenID-Diensteanbieter anmelden und ben\u00F6tigen daher nur ein Kennwort.
-register.openid.desc.title      = Was ist OpenID?
-register.openid.example         = (z. B. http://me.yahoo.com)
-register.openid.hint            = Alternativ k\u00F6nnen Sie sich <a href="{0}">mit Ihrer OpenID registrieren</a>. Es ist einfacher und Sie brauchen sich keinen weiteren Benutzernamen und Passwort merken.
-register.openid.optional        = Optionale Angaben
-register.openid.required        = Pflichtfelder
-register.openid.step1           = Schritt 1 - Geben Sie im unteren Feld Ihre OpenID ein
-register.openid.step2           = Schritt 2 - Profildaten bearbeiten
+register.ldap.hint1                 = Wahlweise
+register.ldap.hint2                 = registrieren Sie sich mit Hilfe von LDAP. 
+register.ldap.hint3                 = Es ist einfacher und Sie werden nicht brauchen, einen neuen Benutzername und ein Passwort im Kopf zu behalten. \r\n
+register.ldap.optional              = optionale Information
+register.ldap.required              = ben\u00F6tigte Information
+register.ldap.step1                 = Schritt 1 - Bitte geben Sie Ihre Bibliothekszugangsdaten ein.
+register.ldap.step2                 = Schritt 2 - Bitte korrigieren Sie Ihre Profildaten.
+register.nextSteps                  = N\u00E4chste Schritte:
+register.nextSteps.step1            = Mit Hilfe dieser drei Schaltfl\u00E4chen k\u00F6nnen Sie leicht und schnell Lesezeichen und Publikationsreferenzen eintragen und Ihre pers\u00F6nliche Sammlung einsehen. Ziehen Sie diese Schaltfl\u00E4chen in die Linkleiste Ihres Browsers.
+register.nextSteps.step2.click      = Ein anschlie\u00DFender Klick auf "mein{0}" zeigt Ihnen Ihr erstes erfolgreich eingetragenes Lesezeichen. 
+register.nextSteps.step2.surf       = Besuchen Sie Ihre Lieblingsseite und speichern Sie ein Lesezeichen indem Sie auf die gerade hinzugef\u00FCgte "Lesezeichen eintragen" Schaltfl\u00E4che klicken.
+register.notice.ldap                = Registrieren Sie sich bei BibSonomy mit der Hilfe Ihres institutionellen LDAP-Servers 
+register.notice.openid              = Registrieren Sie sich bei BibSonomy mit Ihrer OpenID
+register.openid.desc                = OpenID ist ein neuer offener Standard, mit dem Sie sich auf Websites \u00FCber nur eine URL anmelden k\u00F6nnen,\ndie Ihnen geh\u00F6rt. Bei dieser URL kann es sich um Ihre Homepage oder Ihr Blog handeln. Sie kann Ihnen auch durch eine Website,\ndie Sie verwenden, zur Verf\u00FCgung gestellt werden. Sie m\u00FCssen sich in jedem Fall nur einmal bei Ihrem OpenID-Diensteanbieter anmelden und ben\u00F6tigen daher nur ein Kennwort.
+register.openid.desc.title          = Was ist OpenID?
+register.openid.example             = (z. B. http://me.yahoo.com)
+register.openid.hint                = Alternativ k\u00F6nnen Sie sich <a href="{0}">mit Ihrer OpenID registrieren</a>. Es ist einfacher und Sie brauchen sich keinen weiteren Benutzernamen und Passwort merken.
+register.openid.optional            = Optionale Angaben
+register.openid.required            = Pflichtfelder
+register.openid.step1               = Schritt 1 - Geben Sie im unteren Feld Ihre OpenID ein
+register.openid.step2               = Schritt 2 - Profildaten bearbeiten
 # register form parts
-register.personal               = Pers\u00F6nliche Informationen
-register.saml.optional          = optionale Information
-register.saml.required          = ben\u00F6tigte Information
-register.saml.step2             = Benutzerkonto Aktivieren
-register.saml.step2.description = Bitte korrigieren Sie Ihre Profildaten.
-register.send                   = Registrieren
-register.signedIn               = Sie haben sich erfolgreich angemeldet.
+register.personal                   = Pers\u00F6nliche Informationen
+register.saml.optional              = optionale Information
+register.saml.registerUser.activate = aktivieren
+register.saml.registerUser.email    = E-Mail-Adresse
+register.saml.registerUser.name     = \u00D6ffentlicher Alias
+register.saml.registerUser.realname = Vollst\u00E4ndiger Name
+register.saml.registerUser.samlId   = Nutzer ID
+register.saml.required              = ben\u00F6tigte Information
+register.saml.step2                 = Benutzerkonto aktivieren
+register.saml.step2.description     = Bitte korrigieren Sie Ihre Profildaten.
+register.send                       = Registrieren
+register.signedIn                   = Sie haben sich erfolgreich angemeldet.
 # registration 
-register.success                = Sie haben sich erfolgreich als Benutzer {0} angemeldet!
-register.success.heading        = Geschafft!
-register.success.text           = Sie sind nun mit am System angemeldet und k\u00F6nnen direkt loslegen.
-register.welcome                = Willkommen bei 
+register.success                    = Sie haben sich erfolgreich als Benutzer {0} angemeldet!
+register.success.heading            = Geschafft!
+register.success.text               = Sie sind nun mit am System angemeldet und k\u00F6nnen direkt loslegen.
+register.welcome                    = Willkommen bei 
 
 relatedtags = Verwandte Tags
 
