messages for settings.group.profileInfo

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1806,7 +1806,7 @@ settings.group.permission.fetch                             = fetch permissions
 settings.group.permission.help                              = Click to fetch the selected group's permissions.
 settings.group.permissionHeading                            = edit group level permissions
 settings.group.permissionIntro                              = Select a group, fetch its current permissions and add or remove permissions.
-settings.group.profileInfo                                  = TODO
+settings.group.profileInfo                                  = The information you enter here will be displayed on the <a href="{0}">group CV page</a>.
 settings.group.realname                                     = real group name
 settings.group.remInvite.button                             = dismiss
 settings.group.remInvite.button.title                       = dismiss the group invite
