--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1813,7 +1813,7 @@ settings.group.permission.fetch                             = Berechtigungen lad
 settings.group.permission.help                              = Klicken Sie hier um die derzeitigen Gruppen-Level Berechtigungen anzuzeigen.
 settings.group.permissionHeading                            = Gruppen-Level Berechtigungen bearbeiten
 settings.group.permissionIntro                              = W\u00E4hlen Sie eine Gruppe aus, laden Sie die aktuellen Gruppen-Level Berechtigungen und l\u00F6schen Sie diese oder f\u00FCgen Sie weitere hinzu.
-settings.group.profileInfo                                  = TODO
+settings.group.profileInfo                                  = Die Informationen, die Sie hier eingeben, werden auf dem <a href="{0}">Lebenslauf</a> der Gruppe angezeigt.
 settings.group.realname                                     = Name der Gruppe
 settings.group.remInvite.button                             = entfernen
 settings.group.remInvite.button.title                       = Mitgliedschaftsantrag entfernen
