1. approved field is added to DB logic. 2. Approved symbol is added to community page.

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -753,6 +753,7 @@ goldStandard.resource.info.pdfps        = documents attached to this post
 goldStandard.resource.info.referencedBy = publications that reference this post
 goldStandard.resource.info.references   = publications referenced by this post
 goldStandard.users                      = users having this post in their collection
+goldStandard.approved.title				= This post is marked as approved. You can change the status in edit page.
 goldStandard.edit.approval				= post approval
 goldStandard.edit.approveMsg			= I approve this post
 goldStandard.edit.approveMsg.help		= Approving this post means this post has reached the standard quality.
