--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -790,6 +790,12 @@ help.link.tag.similarRelated = /help_de/Schlagwortnavigation
 
 hide = verbergen
 
+history.currentVersion          = Diese Version ist identisch zur aktuellen Version.
+history.firstVersion            = Dies ist die erste Version dieses Eintrages.
+history.historyList.header      = Versionsgeschichte:
+history.historySelect.compareTo = Vergleiche
+history.identicalToPreVersion   = Diese Version ist identisch zur vorherigen Version.
+
 # names of images to be shown
 image.button.myProject            = /resources/image/button_myBibSonomy_de.png
 image.button.postBookmark         = /resources/image/button_postBookmark_de.png
