--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -816,7 +816,9 @@ history.identicalToPreVersion   = This version is identical to the previous vers
 history.restore.confirm         = Do you really want to restore the selected fields?
 history.restoreBtn.disabled     = restore button is only enabled when you are comparing a revision to the current post.  
 history.restoreBtn.enabled      = restore to this version
+history.selection.current       = current version ({0} different fields)
 history.selection.help          = Select a revision and see the differences to this revision. (If you select 'current version', you will have an option to restore the current post to this version.)
+history.selection.previous      = previous version ({0} different fields)
 
 # names of images to be shown
 image.button.myProject            = /resources/image/button_myBibSonomy.png
