--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -795,6 +795,8 @@ history.firstVersion            = Dies ist die erste Version dieses Eintrages.
 history.historyList.header      = Versionsgeschichte:
 history.historySelect.compareTo = Vergleiche
 history.identicalToPreVersion   = Diese Version ist identisch zur vorherigen Version.
+history.selection.current       = aktuelle Version ({0} verschiedene Felder)
+history.selection.previous      = vorherige Version ({0} verschiedene Felder)
 
 # names of images to be shown
 image.button.myProject            = /resources/image/button_myBibSonomy_de.png
