--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -795,6 +795,7 @@ history.firstVersion            = Dies ist die erste Version dieses Eintrages.
 history.historyList.header      = Versionsgeschichte:
 history.historySelect.compareTo = Vergleiche
 history.identicalToPreVersion   = Diese Version ist identisch zur vorherigen Version.
+history.restore.confirm         = Wollen Sie die ausgew\u00E4hlten Felder wiederherstellen?
 history.selection.current       = aktuelle Version ({0} verschiedene Felder)
 history.selection.previous      = vorherige Version ({0} verschiedene Felder)
 
@@ -1287,6 +1288,7 @@ post.resource.annote                                    = Kommentar
 post.resource.annote.help                               = Ein Kommentar, der von manchen BibTeX-Stilen benutzt wird
 post.resource.author                                    = Autor(en)
 post.resource.author.help                               = Die Namen der Autoren im Format "Nachname, Vorname" - ein Autor pro Zeile
+post.resource.bibtexAbstract                            = Zusammenfassung
 post.resource.bibtexKey                                 = BibTeX-Schl\u00FCssel
 post.resource.bibtexKey.help                            = Ein gut zu merkender Schl\u00FCssel (ohne Leerzeichen). Dient dazu, die Publikation in einem LaTeX-Dokument mittels des <tt>\\cite{}</tt>-Befehls zu referenzieren. Kann frei gew\u00E4hlt werden.
 post.resource.bookmark_a_publication                    = Die Seite, die Sie speichern wollen enth\u00E4lt folgende Publikationsreferenz
@@ -1707,6 +1709,8 @@ resources.searchExternal.go            = Los
 resources.similar                      = \u00C4hnliche Ressourcen
 
 restClient.java = Java REST Client
+
+restore = wiederherstellen
 
 save = Speichern
 
