--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1281,6 +1281,7 @@ post.resource.annote                                    = annote
 post.resource.annote.help                               = a comment, used by some BibTeX styles
 post.resource.author                                    = author(s)
 post.resource.author.help                               = each author on a separate line, format "Lastname, Firstname"
+post.resource.bibtexAbstract                            = abstract
 post.resource.bibtexKey                                 = BibTeX key
 post.resource.bibtexKey.help                            = A memorable key without spaces. Can be used to reference the work in a LaTeX document using the <tt>\\cite{}</tt> command. Can be freely chosen.
 post.resource.bookmark_a_publication                    = The page you are trying to bookmark contains the following publication reference
@@ -1699,6 +1700,8 @@ resources.searchExternal.go            = Go
 resources.similar                      = similar resources
 
 restClient.java = Java REST Client
+
+restore = restore
 
 save = save
 
