community post and history action buttons moved to dropdown menu

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -124,7 +124,7 @@ bibtex.actions.openurl.title                 = Eine Anfrage mit den Metadaten di
 bibtex.actions.pick.inactive                 = Melden Sie sich an um Eintr\u00E4ge zu Ihrer Ablage hinzuzuf\u00FCgen oder zu entfernen.
 # BibTex actions
 bibtex.actions.pick.title                    = Diese Publikation zur Ablage hinzuf\u00FCgen
-bibtex.actions.posthistory.title             = Den Verlauf f\u00FCr diese Publication zeigen
+bibtex.actions.posthistory.title             = Verlauf dieser Publikation
 bibtex.actions.private_document.delete       = L&ouml;schen
 bibtex.actions.private_document.description  = Dokumente dieses Eintrags
 bibtex.actions.private_document.download     = Herunterladen
