--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -754,6 +754,10 @@ goldStandard.resource.info.pdfps        = Dokumente zu diesem Eintrag
 goldStandard.resource.info.referencedBy = Publikationen, die diesen Eintrag referenzieren
 goldStandard.resource.info.references   = Publikationen, die dieser Eintrag referenziert
 goldStandard.users                      = Benutzer, die diesen Eintrag in ihrer Sammlung haben
+goldStandard.approved.title             = Dieser Eintrag wurde auf bibliothekarische Richtigkeit \u00FCberpr\u00FCft.
+goldStandard.edit.approval              = Pr\u00FCfung des Eintrags
+goldStandard.edit.approveMsg            = Ich best\u00E4tige die bibliothekarische G\u00FCte dieses Eintrags
+goldStandard.edit.approveMsg.help       = Mit der Pr\u00FCfungsfunktion wird die Vollst\u00E4ndigkeit und Korrektheit des Eintrags best\u00E4tigt.
 
 goldstandard.resource.info.noAbstract = Bisher wurden keine Zusammenfassung zu diesem Eintrag hinzugef\u00FCgt.
 goldstandard.resource.info.noLinks    = Bisher wurden keine Links zu diesem Eintrag hinzugef\u00FCgt.
