--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -782,10 +782,10 @@ goldStandard.resource.info.pdfps        = documents attached to this post
 goldStandard.resource.info.referencedBy = publications that reference this post
 goldStandard.resource.info.references   = publications referenced by this post
 goldStandard.users                      = users having this post in their collection
-goldStandard.approved.title				= This post is marked as approved. You can change the status in edit page.
-goldStandard.edit.approval				= post approval
-goldStandard.edit.approveMsg			= I approve this post
-goldStandard.edit.approveMsg.help		= Approving this post means this post has reached the standard quality.
+goldStandard.approved.title             = This post is marked as approved by an authority.
+goldStandard.edit.approval              = post approval
+goldStandard.edit.approveMsg            = I approve the high quality of this post
+goldStandard.edit.approveMsg.help       = Approving this post means this post's metadata is complete and correct.
 
 goldstandard.resource.info.noAbstract = No abstract has been added to this post.
 goldstandard.resource.info.noLinks    = No links have been added to this post.
