changed messages in groupRequest page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -1873,7 +1873,12 @@ settings.group.reporting.mail                               = mail reporting set
 settings.group.reporting.update                             = update reporting settings
 settings.group.reqGroup                                     = request a new group
 settings.group.reqGroup.button                              = request group
-settings.group.reqReason                                    = reason for request
+settings.group.reqGroup.description                         = Here you can request a new group. Please enter the desired name of the group and justify your request. We will inform you as soon as a system administrator approved your group.
+settings.group.reqGroup.reason                              = reason for request
+settings.group.reqGroup.automatic                           = create a new group
+settings.group.reqGroup.automatic.button                    = create group
+settings.group.reqGroup.automatic.description               = Here you can create a new group. Please enter the desired name of the group and a short description. Your group will be created immediately.
+settings.group.reqGroup.automatic.reason                    = short description of the group
 settings.group.requestGroup.description                     = A new group can be created on the page <a href="{0}">{1}</a>.
 settings.group.requestGroup.link                            = request new group
 settings.group.settings                                     = group settings
