--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -981,6 +981,8 @@ mail.activation.body                 = \nWelcome to {1}! Your account activation
 mail.activation.subject              = Your {1} activation was successful!
 mail.groupInvite.body                = \nHello {0}!\n\nUser {1} has invited you to join {2}.\n\nVisit {3}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
 mail.groupInvite.subject             = Group invitation to {2}
+mail.group.activation.body           = Hello {0}!\n\nYour group {1} has been created. You can visit the groups' page under {2} and edit its settings under {3}.\n\nHave fun using {4}!\n\nReplies to this e-mail address are deleted, please send questions to {5}.
+mail.group.activation.subject        = Your group {1} has been created!
 mail.joinGroupRequest.body           = \nHello {0}!\n\nUser {1} has sent a request to join your group.\n\nReason: {2}\n\nVisit {3}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
 mail.joinGroupRequest.denied.body    = \nHello {1}\n\nYour request to join group {0} has been denied.\n\nReason: {2}\n\nHave a look on the help page and the FAQ:\n{3}help\n{3}faq\n\nNews regarding {3} can be found in our blog:\nhttp://blog.bibsonomy.org\n\nReplies to this e-mail address are deleted, please send questions to {7}.\n
 mail.joinGroupRequest.denied.subject = Your join request for group {0}
