--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -1519,6 +1519,7 @@ post.resource.series.help                               = Der Name einer Reihe v
 post.resource.spaceseparated                            = durch Leerzeichen getrennt
 post.resource.suggested                                 = Vervollst\u00E4ndigung
 post.resource.suggestion.help                           = Andere Benutzer verwenden:
+post.resource.suggestion.hint                           = Es gibt Vorschl\u00E4ge zu dieser Eingabe
 post.resource.tags                                      = Tags
 post.resource.tags.cap                                  = Tags
 post.resource.tags.comma                                = Bitte best\u00E4tigen Sie, dass Sie Kommas/Semikolons in den Tags verwenden m\u00F6chten. 
