users deleting themselves and being last admin can't delete themselves.

--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -616,6 +616,7 @@ error.user.no_valid_username                = Bitte geben Sie einen g\u00fcltige
 error.user.none_existing_user               = Der Benutzer mit dem Namen {0} existiert nicht in unserem System.
 error.user.relation.update                  = Fehler beim Bearbeiten der Benutzer-Relation.
 error.user_is_group_cannot_be_deleted       = Dieser Benutzer ist eine Gruppe und kann deshalb leider nicht gel\u00f6scht werden.
+error.user_is_last_admin_of_group           = Dieser Benutzer ist der letzte Administrator einer Gruppe und kann deshalb leider nicht gel\u00f6scht werden.
 error.user_page_with_wrong_user_similarity  = Das angefragte &Auml;hnlichkeitsma\u00df f\u00fcr Benutzer wird leider nicht unterst\u00fctzt. Versuchen Sie 'folkrank', 'jaccard' oder 'tfidf'.
 # errors
 error.user_page_without_username            = Diese Seite existiert leider nicht auf unserem Server. Um auf eine Benutzerseite zuzugreifen, verwenden Sie bitte das URL-Schema /user/USERNAME.
