--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -644,6 +644,7 @@ error.user.no_valid_username                = Please enter a valid Username.
 error.user.none_existing_user               = The User with the Name {0} doesn't exist in our system.
 error.user.relation.update                  = Error updating user relationship.
 error.user_is_group_cannot_be_deleted       = Sorry, this user is a group and cannot be deleted.
+error.user_is_last_admin_of_group           = Sorry, this user is the last admin of a group and cannot be deleted.
 error.user_page_with_wrong_user_similarity  = Sorry, the user similarity is not supported. Try 'folkrank', 'jaccard' or 'tfidf'.
 # errors
 error.user_page_without_username            = Sorry, this page does not exist on our server. If you want to access a user page, please specify a username like /user/USERNAME.
