added safari extension to buttons page

--- a/bibsonomy-webapp/src/main/resources/messages.properties
+++ b/bibsonomy-webapp/src/main/resources/messages.properties
@@ -232,7 +232,7 @@ bookmarklet.addon.text3           = A click on the {0} button pops up the menu c
 bookmarklet.buttonTextChrome      = Download Chrome Add-On
 bookmarklet.buttonTextFirefox     = Download Firefox Add-On
 bookmarklet.buttonTextIE          = For now we do not provide an add-on for your browser.
-bookmarklet.buttonTextSafari      = Download Safari Add-On
+bookmarklet.buttonTextSafari      = Download Safari Extension
 bookmarklet.legacyNotice          = If you should not wish to install an add-on in your browser or your browser is not listed, you can instead use our bookmarklet buttons.
 bookmarklet.legacyNotice.further1 = Find out more below.
 bookmarklet.legacyNotice.further2 = You can find them on the <a href="/buttons"> buttons page</a>.
