--- a/bibsonomy-webapp/src/main/resources/messages_de.properties
+++ b/bibsonomy-webapp/src/main/resources/messages_de.properties
@@ -204,7 +204,7 @@ bookmarklet.addon.text3           = Ein Klick auf das {0}-Logo \u00F6ffnet das M
 bookmarklet.buttonTextChrome      = Chrome-Erweiterung herunterladen
 bookmarklet.buttonTextFirefox     = Firefox-Erweiterung herunterladen
 bookmarklet.buttonTextIE          = F\u00FCr diesen Browser bieten wir bisher leider kein Browser-Add-on and.
-bookmarklet.buttonTextSafari      = Safari-Erweiterung herunterladen
+bookmarklet.buttonTextSafari      = Safari Erweiterung herunterladen
 bookmarklet.legacyNotice          = Sollten Sie kein Plugin installieren wollen oder ist Ihr Browser nicht aufgef\u00FChrt, dann verwenden Sie doch einfach unsere Bookmarklet-Schaltfl\u00E4chen.
 bookmarklet.legacyNotice.further1 = Informationen dazu finden Sie im n\u00E4chsten Abschnitt.
 bookmarklet.legacyNotice.further2 = Diese finden Sie auf der <a href="/buttons"> Buttonsseite</a>.
